src/objects/tmTrialFeatureRequest__c.object
<CustomObject>
    <description>This object contains trial feature requests created by AEs to provision features to a customer trial.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trial Feature Requests</relationshipLabel>
        <relationshipName>TrialFeatureRequests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AutoApprove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trial Feature Requests</relationshipLabel>
        <relationshipName>TrialFeatureRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Trial Feature Requests</relationshipLabel>
        <relationshipName>TrialFeatureRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Tenant</referenceTo>
        <relationshipLabel>Trial Feature Requests</relationshipLabel>
        <relationshipName>TrialFeatureRequests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrialOrderStatus__c</fullName>
        <formula>TEXT(Order__r.Status)</formula>
        <label>Trial Order Status</label>
        <type>Text</type>
        <inlineHelpText> Provisioning status of this request. Activated=Order placed, not provisioned; Pending=Order is in the provisioning queue; Provsioned=the request is complete, and the feature should be available in the trial org.</inlineHelpText>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <label>Edition</label>
        <length>50</length>
        <type>Text</type>
    </fields>    <fields>
        <fullName>TotalProvisionedCoreLicenses__c</fullName>
        <label>Total Provisioned Core Licenses</label>
        <summarizedField>tmTrialFeatureRequestItem__c.ProvisionedQuantity__c</summarizedField>
        <summaryFilterItems>
            <field>tmTrialFeatureRequestItem__c.IsCoreLicense__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>tmTrialFeatureRequestItem__c.TrialFeatureRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <inlineHelpText> The total number of core licenses that had been provisioned at the time of the request. NOTE: this may not indicate the current number of licenses provisioned. Please view the customer's request history to determine the total number of licenses.</inlineHelpText>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalRequestedAddonLicenses__c</fullName>
        <label>Total Requested Addon Licenses</label>
        <summarizedField>tmTrialFeatureRequestItem__c.RequestedQuantity__c</summarizedField>
        <summaryFilterItems>
            <field>tmTrialFeatureRequestItem__c.RequestedQuantity__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>tmTrialFeatureRequestItem__c.IsCoreLicense__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>tmTrialFeatureRequestItem__c.RequiresApproval__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>tmTrialFeatureRequestItem__c.TrialFeatureRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <inlineHelpText> Total quantity of addon product licenses on this request.</inlineHelpText>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalRequestedCoreLicenses__c</fullName>
        <label>Total Requested Core Licenses</label>
        <summarizedField>tmTrialFeatureRequestItem__c.RequestedQuantity__c</summarizedField>
        <summaryFilterItems>
            <field>tmTrialFeatureRequestItem__c.IsCoreLicense__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>tmTrialFeatureRequestItem__c.TrialFeatureRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
        <inlineHelpText> Total number of additional core licenses on this request.</inlineHelpText>
    </fields>
    <fields>
        <fullName>TotalCoreLicenses__c</fullName>
        <formula>TotalProvisionedCoreLicenses__c  +  TotalRequestedCoreLicenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Core Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <inlineHelpText> Total number of core licenses that will be provisioned after this request is complete. (Total Provisioned Core Licenses+Total Requested Core Licenses)</inlineHelpText>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrialOrderType__c</fullName>
        <label>Trial Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Trial Feature Request</label>
    <nameField>
        <displayFormat>TFR-{0000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Feature Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>